--- a/styles/main.css
+++ b/styles/main.css
@@ -1,10 +1,32 @@
-html {
-    font-family: 'Robot',sans-serif;
+
+
+:root {
+    --title-color:#322153;
+    --primary-color:#34cb79;
 }
 
-/* body{
-    background: # ;
-} */
+*{
+     margin: 0;
+     padding: 0;
+}
+
+html {
+    font-family: Robot,sans-serif;
+}
+
+body{
+    background: #f0f0f5;
+    -webkit-font-smoothing: antialiased;
+}
+
+a{
+    text-decoration: none;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: Ubuntu, sans-serif;
+    color: var(--title-color);
+}
 
 /* BOX MODEL
 modelo de caixa tem 
@@ -20,23 +42,144 @@ alinhamentos, posicionamento
 
 
 
-   /* background-position: 35vw bottom;     CONTINUAÇÃO!!    1:10 de vídeo.       */  
-
-
-
-
+    background-position: 35vw bottom;    /* posição x e y  */
 }
 
 #page-home .content{
     width:90%;
     max-width: 1100px;
+    height: 100%;
 
     margin: 0 auto;
+
+    display: flex;
+    flex-direction: column;
 }
 
-#page-home .header {
+#page-home header{
+
+    margin-top: 48px;
+
     display: flex;
     align-items: center;
     justify-content: space-between;
+}
+
+#page-home header a {
+    display: flex;
+
+    color: var(--title-color);     /*  ou = color: #322153; */
+    font-weight: 700;
+   
+}
+
+#page-home header a span {
+    margin-right: 16px;
+    display: flex;
+    
+    background-image: url('../assets/log-in.svg');
+
+    width: 20px;
+    height: 20px;
+}
+
+
+#page-home main{
+    max-width: 560px;
+
+    flex: 1;  /* height: 600px; = ñ precisa pq já ta lá em cima */
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+#page-home main h1{
+    font-size: 54px;
+    /* color: var(--title-color); = não precisa */
+}
+
+#page-home main p{
+    font-size: 24px;
+    line-height: 38px;
+    margin-top: 24px;
+}
+
+#page-home main a{
+    width: 100%;
+    max-width: 360px;
+    height: 72px;
+
+    border-radius: 8px;
+
+    display:flex;
+    align-items: center;
+
+    margin-top: 40px;
+
+    background-color: var(--primary-color);
+
+    transition: 400ms;
+
+    /* font-weight: bold;
+    color: white; */
+}
+
+#page-home main a:hover {
+    background-color: #2fb86e;
+}
+
+#page-home main a span{
+
+    width: 72px;
+    height: 72px;
+
+    border-top-left-radius: 8px;
+    border-bottom-left-radius: 8px;
+
+    background-color: rgba(0, 0, 0, 0.08);
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#page-home main a span::after{
+    content: "";
+    background-image: url('../assets/search.svg');
+
+    width: 20px;
+    height: 20px;
+}  
+
+#page-home main a strong{
+    flex: 1;    /* automático */
+    color: white;
+    text-align: center;   
+}
+
+@media(max-width: 900px){  /* responsivo */
+
+    #page-home {
+        background-position-x: 70vw; /* retira a imagem, pra não encavalar  */
+    }
+
+    #page-home .content{
+        align-items: center;
+        text-align: center;
+    }
+
+    #page-home header a{
+        position: absolute; /* duas folhas, uma em cima da outra */
+        bottom: 48px;
+
+        left: 50%;
+        transform: translateX(-50%);
+    }
+
+    #page-home main{
+        align-items: center;
+    }
+
 
 }
