--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -20,14 +20,18 @@
     #page-home main{
         align-items: center;
     }
+
+    #page-home main h1{    /* adaptação */
+        font-size: 32px;
+    }
 }
 
-@media(max-width: 1700px){
+@media(min-width: 1700px){
     #page-home {
         background-position-x: 40vw; /* retira a imagem, pra não encavalar  */
     }
 }
-@media (max-height: 750px) {
+@media (max-height: 760px) {
     #page-home{
         background-position-y: 200px;
     
