--- a/styles/create-point.css
+++ b/styles/create-point.css
@@ -103,3 +103,19 @@ form label{
 form .field-group .field + .field{
     margin-left: 24px;
 }
+
+form button{
+    width: 260px;
+    height: 56px;
+
+    background-color: var(--primary-color);
+    border-radius: 8px;
+
+    color: white;
+    font-weight: bold;
+    font-size: 16px;
+
+    border:0;
+
+    margin-top: 40px;
+}
